<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@android:style/Widget.Material.ScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarStyle="outsideOverlay"
    android:scrollbars="horizontal|vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/linear31"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/app_background"
        android:orientation="vertical"
        android:padding="@dimen/padding_size2"
        tools:context="com.alexios.florid.Main3Activity">

        <LinearLayout
            android:id="@+id/linear39"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/padding_size">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mode"/>
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:id="@+id/ra"
                >
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ra1"
                    android:text="@string/h_mode"
                    android:checked="true"
                    android:textColor="#f00"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ra2"
                    android:text="@string/a_mode"
                    android:textColor="#0ff"/>


            </RadioGroup>





        </LinearLayout>


        <LinearLayout
            android:id="@+id/linear32"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/padding_size">

            <TextView
                android:id="@+id/text31"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:gravity="center"
                android:text="@string/env_temp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text32"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:gravity="center"
                android:text="@string/default_zero"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text311"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/Celsius"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear33"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/padding_size">

            <TextView
                android:id="@+id/text35"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:gravity="center"
                android:text="@string/env_humi"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text36"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:gravity="center"
                android:text="@string/default_zero"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView312"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/percent"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear34"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/padding_size">

            <TextView
                android:id="@+id/text37"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:gravity="center"
                android:text="@string/soil_humi"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text38"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:gravity="center"
                android:text="@string/default_zero"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView313"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/percent"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear35"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/padding_size">

            <TextView
                android:id="@+id/text39"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:gravity="center"
                android:text="@string/light"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text3x"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:gravity="center"
                android:text="@string/default_zero"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView314"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/percent"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear36"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/padding_size">

            <Button
                android:id="@+id/button31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_dark"
                android:onClick="getData"
                android:text="@string/get_data"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear37"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/padding_size">

            <Button
                android:id="@+id/button32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/holo_purple"
                android:onClick="goBack"
                android:text="@string/goback"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear38"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/padding_size">

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/holo_orange_dark"
                android:onClick="getAdvice"
                android:text="@string/advice"
                android:textColor="@android:color/white" />
        </LinearLayout>



    </LinearLayout>
</ScrollView>