<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@android:style/Widget.Material.ScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarStyle="outsideOverlay"
    android:scrollbars="horizontal|vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/linear51"
        android:layout_width="match_parent"
        android:layout_height="@android:dimen/thumbnail_height"
        android:background="@drawable/app_background"
        android:orientation="vertical"
        android:padding="@dimen/padding_size2"
        tools:context="com.alexios.florid.Main5Activity">

        <LinearLayout
            android:id="@+id/linear52"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/padding_size">

            <TextView
                android:id="@+id/text51"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/input_commang" />

            <EditText
                android:id="@+id/edit51"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:ems="10"
                android:hint="@string/input_hint"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear53"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/padding_size">

            <TextView
                android:id="@+id/text52"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/reslut" />

            <TextView
                android:id="@+id/text53"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear54"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/padding_size">

            <Button
                android:id="@+id/button51"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_dark"
                android:onClick="enterCommand"
                android:text="@string/learned"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear55"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/padding_size">

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/holo_purple"
                android:onClick="goBack"
                android:text="@string/goback"
                android:textColor="@android:color/white" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>